--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>camel-core</artifactId>
       <version>2.14.1</version>
     </dependency>
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.5</version>
+</dependency>
+
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-metrics</artifactId>
