--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
   </properties>
 
   <dependencies>
+      <dependency>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>camel-netty</artifactId>
+    <version>2.15.1</version>
+    <!-- use the same version as your Camel core version -->
+</dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
