--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,18 @@
   </properties>
 
   <dependencies>
+    <dependency>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>camel-netty4-http</artifactId>
+    <version>2.17.3</version>
+    <!-- use the same version as your Camel core version -->
+</dependency>
+<dependency>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>spi-annotations</artifactId>
+    <version>2.17.3</version>
+</dependency>
+
       <dependency>
     <groupId>org.apache.camel</groupId>
     <artifactId>camel-netty</artifactId>
@@ -23,7 +35,7 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
-      <version>2.14.1</version>
+      <version>2.17.3</version>
     </dependency>
 <dependency>
     <groupId>commons-io</groupId>
@@ -34,12 +46,12 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-metrics</artifactId>
-      <version>2.14.1</version>
+      <version>2.17.3</version>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-jetty</artifactId>
-      <version>2.14.1</version>
+      <version>2.17.3</version>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
@@ -67,7 +79,7 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-test</artifactId>
-      <version>2.14.1</version>
+      <version>2.17.3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -81,8 +93,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.5.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
